# roboptim-analysis

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/roboptim/analysis/: distance_to_sphere.py  log_to_yaml.py  plot_csv.py
tests/: CMakeLists.txt  simple.py
tests/data/problem-71/: constraint-0-evolution.csv  constraint-violation-evolution.csv  cost-evolution.csv  x-evolution.csv
tests/data/problem-71/iteration-0/: constraint-violation  cost  x.csv
tests/data/problem-71/iteration-0/constraint-0/: jacobian.csv  value.csv
tests/data/problem-71/iteration-1/: constraint-violation  cost  x.csv
tests/data/problem-71/iteration-1/constraint-0/: jacobian.csv  value.csv
tests/data/problem-71/iteration-2/: constraint-violation  cost  x.csv
tests/data/problem-71/iteration-2/constraint-0/: jacobian.csv  value.csv
tests/data/problem-71/iteration-3/: constraint-violation  x.csv
tests/data/problem-71/iteration-3/constraint-0/: jacobian.csv  value.csv
tests/data/problem-71/iteration-4/: constraint-violation  cost  x.csv
tests/data/problem-71/iteration-4/constraint-0/: jacobian.csv  value.csv
tests/data/problem-71/iteration-5/: constraint-violation  cost  x.csv
tests/data/problem-71/iteration-5/constraint-0/: jacobian.csv  value.csv
tests/data/problem-71/iteration-6/: constraint-violation  x.csv
tests/data/problem-71/iteration-6/constraint-0/: jacobian.csv  name
tests/data/problem-71/iteration-7/: constraint-violation  x.csv
tests/data/problem-71/iteration-7/constraint-0/: jacobian.csv
tests/data/problem-71/iteration-8/: constraint-violation  cost
tests/data/problem-71/iteration-8/constraint-0/: value.csv
